[package]
name = "rune"
version = "0.1.0"
authors = ["Troy Hinckley"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/text-buffer",
  "crates/rune-macros",
  "crates/rune-core"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0.26"
proc-macro2 = "1.0.60"
anyhow = "1.0.69"
sptr = "0.3.2"
fallible-iterator = "0.3.0"
fallible-streaming-iterator = "0.1.9"
fxhash = "0.2.1"
indexmap = "2.1.0"
memoffset = "0.9.0"
bstr = "1.3.0"
float-cmp = "0.9.0"

text-buffer = { version = "0.1.0", path = "crates/text-buffer" }
rune-core = { version = "0.1.0", path = "crates/rune-core" }
rune-macros = { version = "0.1.0", path = "crates/rune-macros" }

[dependencies]
anyhow = { workspace = true }
bstr = { workspace = true }
bytecount = "0.6.3"
druid = "0.8.3"
fancy-regex = "0.12.0"
float-cmp = { workspace = true }
hostname = "0.3.1"
memoffset = { workspace = true }
num_enum = "0.7.1"
paste = "1.0.12"
rand = "0.8.5"
sptr = { workspace = true }
streaming-iterator = "0.1.9"
titlecase = "2.2.1"
fallible-iterator = { workspace = true }
fallible-streaming-iterator = { workspace = true }
indexmap = { workspace = true }
fxhash = { workspace = true }

text-buffer = { workspace = true }
rune-macros = { workspace = true }
rune-core = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

# [dev-dependencies]
# backtrace-on-stack-overflow = "0.3.0"

[build-dependencies]
syn = { workspace = true }
quote = { workspace = true }

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = true

[features]
default = []
debug_bytecode = []

[workspace.lints.rust]
macro_use_extern_crate = "deny"
keyword_idents = "deny"
non_ascii_idents = "deny"
rust_2018_idioms = "warn"
# This 2018 idiom lint makes code more verbose with little benefit
elided_lifetimes_in_paths = "allow"
unused_qualifications = "warn"
meta_variable_misuse = "warn"
explicit_outlives_requirements = "warn"
missing_copy_implementations = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = {level = "warn", priority = -1}
as_ptr_cast_mut = "warn"
equatable_if_let = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
manual_let_else = "warn"
unused_self = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
let_and_return = "allow"
inline_always = "allow"
match_bool = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_ptr_alignment = "allow"
single_match_else = "allow"
missing_panics_doc = "allow"
