[package]
name = "rune"
version = "0.1.0"
authors = ["Troy Hinckley"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/text-buffer",
  "crates/rune-macros",
  "crates/rune-core",
  "crates/interval-tree"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0.26"
anyhow = "1.0.69"
fallible-iterator = "0.3.0"
fallible-streaming-iterator = "0.1.9"
fxhash = "0.2.1"
indexmap = { version = "2.2.5", git = "https://github.com/CeleritasCelery/indexmap.git" }
memoffset = "0.9.0"
bstr = "1.3.0"
float-cmp = "0.10.0"
clap = { version = "4.5.4", features = ["derive"] }
proptest = "1.7.0"
proptest-derive = "0.7.0"

text-buffer = { version = "0.1.0", path = "crates/text-buffer" }
rune-core = { version = "0.1.0", path = "crates/rune-core" }
rune-macros = { version = "0.1.0", path = "crates/rune-macros" }
interval-tree ={ version = "0.1.0", path = "crates/interval-tree" }

[dependencies]
anyhow = { workspace = true }
bytecount = "0.6.3"
clap = { workspace = true }
fancy-regex = "0.16.2"
float-cmp = { workspace = true }
hostname = "0.4.0"
memoffset = { workspace = true }
num_enum = "0.7.1"
paste = "1.0.12"
rand = "0.9.2"
streaming-iterator = "0.1.9"
fallible-iterator = { workspace = true }
fallible-streaming-iterator = { workspace = true }
text-buffer = { workspace = true }
rune-macros = { workspace = true }
rune-core = { workspace = true }
bumpalo = { version = "3.15.3", features = ["collections"] }
libc = "0.2.153"
base64 = "0.22.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer = "0.1.46"
libm = "0.2.11"
interval-tree = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }


[build-dependencies]
syn = { workspace = true }
quote = { workspace = true }

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = true

[features]
default = []
debug_bytecode = []

[target.'cfg(target_os = "macos")'.dev-dependencies]
users = "0.11.0"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
# This 2018 idiom lint makes code more verbose with little benefit
elided_lifetimes_in_paths = "allow"
explicit_outlives_requirements = "warn"
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
non_ascii_idents = "deny"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
as_ptr_cast_mut = "warn"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
equatable_if_let = "warn"
inline_always = "allow"
let_and_return = "allow"
manual_let_else = "warn"
match_bool = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
similar_names = "allow"
single_match_else = "allow"
unused_self = "allow"
comparison_chain = "allow"
return_self_not_must_use = "allow"
must_use_candidate = "allow"
