[package]
name = "elprop"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
syn = { workspace = true }
proc-macro2 = "1.0.86"
rand = "0.8.5"
proptest = "1.5.0"
regex = "1.11.0"

[lints]
workspace = true
