[package]
name = "elprop"
version = "0.1.0"
edition.workspace = true
default-run = "elprop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
syn = { workspace = true }
proc-macro2 = "1.0.86"
rand = "0.8.5"
proptest = "1.5.0"
regex = "1.11.0"
serde = {version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
num-bigint = { version = "0.4.6", features = ["arbitrary", "serde"] }

[lints]
workspace = true
