[package]
name = "eprop"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
syn = { workspace = true }
arbitrary = { version = "1.3.2", features = ["derive"] }
proc-macro2 = "1.0.86"
rand = "0.8.5"

[lints]
workspace = true
