[package]
name = "fn_macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp functions."
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.7"
darling = "0.11.0"
syn = { version = "1.0.54", features = ["full"] }
proc-macro2 = "1.0.24"
