[package]
name = "fn_macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp functions."
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.21"
darling = "0.14.1"
syn = { version = "1.0.99", features = ["full"] }
proc-macro2 = "1.0.43"
