[package]
name = "fn_macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp functions."
edition.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "1.0"
darling = "0.20"
syn = { version = "2.0", features = ["full"]}
proc-macro2 = "1.0"

[lints]
workspace = true
