[package]
name = "interval-tree"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "An interval tree implementation using Red-Black Tree as its underlying data structure."

[dependencies]
criterion = "0.8"
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.9"

[dev-dependencies]
criterion = "0.8"
proptest = { workspace = true }
proptest-derive = { workspace = true }

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
