[package]
name = "rune-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp functions."
edition.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = { workspace = true}
syn = { workspace = true }
darling = "0.23.0"
proc-macro2 = "1.0.60"
Inflector = "0.11.4"

[lints]
workspace = true
