[package]
name = "text-buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-size = {git = "https://github.com/CeleritasCelery/get-size.git", branch = "boxed_slice_fix", features = ["derive"]}
smallvec = {version = "1.11.0", features = ["union"]}
# str_indices = "0.4.1"
str_indices = {git = "https://github.com/CeleritasCelery/str_indices.git", branch = "optimized"}

[dev-dependencies]
proptest = "1.0"
criterion = {version = "0.5.1", features = ["html_reports"]}
crdt-testdata = { path = "reference-tests/crdt-testdata" }

[[bench]]
name = "benches"
harness = false

[lints]
workspace = true
