[package]
name = "text-buffer"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-size = {git = "https://github.com/CeleritasCelery/get-size.git", branch = "boxed_slice_fix", features = ["derive"]}
smallvec = {version = "1.11.0", features = ["union"]}
str_indices = "0.4.3"

[dev-dependencies]
proptest = "1.0"
criterion = {version = "0.5.1", features = ["html_reports"]}
crdt-testdata = { path = "reference-tests/crdt-testdata" }

[[bench]]
name = "benches"
harness = false

[lints]
workspace = true
