[package]
name = "text-buffer"
version = "0.1.0"
edition.workspace = true
description = "An implementation of a gap buffer"
readme = "README.md"
repository = "https://github.com/CeleritasCelery/rune"
license = "GPL-3.0-or-later"
keywords = ["text", "buffer", "edit"]
categories = ["text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-size2 = {version = "0.7.0", features = ["derive"]}
smallvec = {version = "^1.11", features = ["union"]}
str_indices = "0.4.3"

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
criterion = {version = "0.5.1", features = ["html_reports"]}
crdt-testdata = { path = "reference-tests/crdt-testdata" }

[[bench]]
name = "benches"
harness = false

[lints]
workspace = true
