[package]
name = "reference-tests"
version = "0.1.0"
edition = "2021"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-buffer = {path = "../"}
crdt-testdata = { path = "crdt-testdata" }

# if run without optimizations these tests will take forever
[profile.dev]
opt-level = 3
